# miDiKompanion

./: .gitignore  .gitignore_music-brain  AI Assistant Setup Guide.md  ANALYSIS_CORRECTIONS.md  ANALYSIS_Production_Guides_and_Tools.md  ANALYSIS_SUMMARY.md  BRIDGE_FIXES_SUMMARY.md  BUILD.md  BUILD_QUICK_REFERENCE.md  BUILD_STATUS.md  BUILD_VARIANTS.md  BridgeClient.cpp alias  CLAUDE.md  CLAUDE_AGENT_GUIDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODE_REVIEW_FOLLOWUP.md  COMPLETE_DAW_DOCUMENTATION_WITH_AUDIO.md  COMPREHENSIVE_TODO.md  COMPREHENSIVE_TODO_IDAW.md  CONSOLIDATION_LOG.md  ChatGPT_Custom_GPT_Instructions.md  Custom_GPT_Build_Script.md  DAW_INTEGRATION.md  DAiW_Cheat_Sheet.md  DELIVERED_FILES.txt  DEVELOPMENT_ROADMAP_music-brain.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION_INDEX.md  Dataview Queries Reference.md  Dockerfile  Dockerfile.training.cuda  Doxyfile  FILE_CLEANUP_SUMMARY.md  FINAL_TODO_COMPLETION_REPORT.md  FINAL_VERIFICATION.md  FREESOUND_PACK_LIST.md  GPT_CODEX_PARALLEL_PROMPT.md  GPT_Upload_Checklist.md  Guitar Recording Workflow.md  (+157 more)
code/configs/: Cargo.toml  pyproject_1.toml  pyproject_2.toml
core/: footer.sh  (+2 more)
cpp_music_brain/: CMakeLists.txt
cpp_music_brain/benchmarks/: bench_groove.cpp
cpp_music_brain/cmake/: CPM.cmake
cpp_music_brain/include/daiw/: dream_state_component.hpp  memory_manager.hpp  types.hpp
cpp_music_brain/src/core/: lock_free_queue.cpp  lock_free_queue.cpp alias  logging.cpp alias  memory.cpp alias  memory_pool.cpp alias  ring_buffer.cpp  ring_buffer.cpp alias  simd.cpp alias  types.cpp alias
cpp_music_brain/src/dsp/: dsp.cpp
cpp_music_brain/src/harmony/: chord.cpp alias  harmony.cpp alias  progression.cpp alias  voice_leading.cpp alias
cpp_music_brain/src/midi/: groove.cpp  groove.cpp alias  humanizer.cpp  humanizer.cpp alias  midi.cpp alias  midi_engine.cpp alias
cpp_music_brain/src/python/: bindings.cpp  harmony_bindings.cpp
cpp_music_brain/tests/: CMakeLists.txt  memory_pool_test.cpp alias  test_groove.cpp alias  test_harmony.cpp  test_harmony.cpp alias  test_main.cpp alias  test_memory.cpp alias  test_simd.cpp alias
final kel/: .cursorrules  .gitignore  AI_ML_VERIFICATION_REPORT.md  BATCH_FILES_SUMMARY.md  BUILD_FIXES_APPLIED.md  CMakeLists.txt  LOST_AND_FOUND_CATALOG.md  ML_INTEGRATION_COMPLETE.md  ML_INTEGRATION_ROADMAP.md  ML_INTEGRATION_STATUS.md  QUICK_REFERENCE.md  QUICK_REFERENCE_ML.md  README.md  REPO_MERGE_PLAN.md  REPO_MERGE_SUMMARY.md  UPLOAD_BATCH_2.txt  UPLOAD_GUIDE.md  VERIFY_INSTRUCTIONS.md  build.md  kelly-new-workspace.code-workspace  setup_workspace.sh  verify_ai_features.py
final kel/.cursor/commands/: build.md
final kel/CODE/: KellyVocalEngine.h
final kel/CODE/PYTHON CODE/: kelly_quantum_field_advanced.py  kelly_quantum_voice_field.py  (+6 more)
final kel/H T M L /: comprehensive_overlap.html  emotion_wheel_3d.html  musical_key_swing_progression.html  musical_timbre_contour_texture.html  musical_variables_dissonance_mode_register.html  musical_variables_dynamics_rhythm_space.html  musical_variables_tempo_harmony_articulation.html  musical_velocity_time.html  parallel_coordinates.html  quantum_emotion_energy_landscape.html  quantum_emotion_network.html  quantum_emotion_resonance.html  quantum_emotion_wavefunction.html
final kel/MARKDOWN/: BUILD_PYTHON_BRIDGE.md  BUILD_VERIFICATION.md  CHANGELOG.md  CHORDGENERATOR_FIXES.md  CMAKE_UPDATE.md  COMPLETE_QUANTUM_FIELD_IMPLEMENTATION.md  COMPLETE_VISUALIZATION_SUMMARY.md  CRITICAL_BUGS_AND_FIXES.md  CRITICAL_FIXES_STATUS.md  CRITICAL_FIXES_SUMMARY.md  DISCOVERED_RESOURCES.md  ENGINE_MAGIC_NUMBERS_AUDIT.md  FIXES_APPLIED.md  FIXES_COMPLETED.md  FIXES_IMPLEMENTATION.md  FIXES_SUMMARY.md  HIGH_PRIORITY_TASKS_COMPLETE.md  IMPROVEMENTS_FROM_V3.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_STATUS.md  LYRIC_VOCAL_IMPLEMENTATION_STATUS.md  MASTER_STATUS.md  ML_FEATURES_SUMMARY.md  ML_IMPLEMENTATION_STATUS.md  ML_INFERENCE_INTEGRATION.md  ML_INTEGRATION_COMPLETE.md  ML_INTEGRATION_GUIDE.md  ML_MODEL_TRAINING.md  ML_NEXT_STEPS_COMPLETE.md  ML_QUICK_START.md  ML_SETUP_COMPLETE.md  PHASE_2_KELLY.md  PROJECT_CRITIQUE.md  PYTHON_BRIDGE.md  PYTHON_BRIDGE_SUMMARY.md  QUANTUM_EMOTIONAL_FIELD_IMPLEMENTATION.md  QUANTUM_EMOTIONAL_FIELD_README.md  README.md  RESOURCE_INTEGRATION_COMPLETE.md  (+15 more)
final kel/Resources/: emotion_model.json
final kel/TXT/: CMakeLists.txt  build_log.txt
final kel/build_bridge/: CMakeCache.txt  Makefile  cmake_install.cmake
final kel/build_plugin/: CMakeCache.txt  Makefile  cmake_install.cmake
final kel/build_plugin_only/: CMakeCache.txt  Makefile  cmake_install.cmake  juce_vst3_helper
final kel/data/: blends.json
final kel/docs/: LYRIC_GENERATION_API.md
final kel/future_features/: CORE_FREE_TOOLCHAIN.md  IMPLEMENTATION_ROADMAP.md  README.md
final kel/lost-and-found/: MANIFEST.md
final kel/ml_framework/: ADVANCED_FIELD_FORMULAS.md  ARCHITECTURE.md  EMOTION_MODELS.md  FRAMEWORK_SUMMARY.md  README.md  requirements.txt
final kel/ml_training/: DATASET_LOADERS_GUIDE.md  README.md  README_ENHANCEMENTS.md  RTNEURAL_EXPORT_VERIFICATION.md  TRAINING_ENHANCEMENTS.md  benchmark_inference.py  dataset_loaders.py  test_model_loading.cpp  train_all_models.py  train_emotion_model.py  validate_rtneural_export.py
final kel/models/: emotionrecognizer.json  model_architectures.json
final kel/phase2/: 04_AGENTS.md  README.md  kelly_phase2_core.py
final kel/python/: .gitignore  QUICK_START.md  biometric_client.py  brain_server.py  mypy.ini  requirements.txt  test_bridge_basic.py
final kel/tests/: run_tests.sh  test_end_to_end.py  test_vocal_synthesis.py
final kel/training_pipe/: ADVANCED_FEATURES_GUIDE.md  DATASET_DOWNLOAD_GUIDE.md  DATASET_INTEGRATION_GUIDE.md  DATASET_INVENTORY.md  ENHANCED_TRAINING_GUIDE.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
tests/penta_core/: CMakeLists.txt  diagnostics_test.cpp  ml_registry_smoke.py  plugin_test_harness.cpp
(+6048 files in other folders)
