[package]
name = "idaw"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
name = "idaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
