[package]
name = "idawi"
version = "0.1.0"
description = "intelligent Digital Audio Workstation - Professional DAW UI with emotion-driven music production"
authors = ["Sean Burdges"]
edition = "2021"
license = "MIT"

[lib]
name = "idawi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
